# cbz-edit

./: Cargo.toml  LICENSE  README.md
src/: chapter_manager.rs  comic_info.rs  config.rs  data.rs  main.rs  zip_util.rs
src/komga/: api.rs  book.rs  manager.rs  mod.rs  series.rs
src/managers/: comic_form.rs  image.rs  komf.rs  komga.rs  mod.rs
src/serializers/: empty_string_as_none.rs  mod.rs
src/ui/: app.rs  comic_form.rs  image.rs  keybindings.rs  list.rs  mod.rs  spinner.rs
src/ui/components/: chapters.rs  data_input.rs  footer.rs  header.rs  help.rs  info.rs  mod.rs  search.rs  series.rs
src/ui/list/: chapter.rs  mod.rs  series.rs
src/ui/widgets/: help_popup.rs  mod.rs
